--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -38,7 +38,7 @@ group :assets do
   gem 'uglifier', '>= 1.3.0'
   # Add Foundation Here
   gem 'compass-rails' # you need this or you get an err
-  gem 'zurb-foundation', '~> 4.0.0'
+  gem 'zurb-foundation'
 end
 
 
