--- a/sample/Gemfile
+++ b/sample/Gemfile
@@ -25,13 +25,13 @@ group :doc do
 end
 
 
-# group :assets do
-#   gem 'sass-rails',   '~> 4.0.0'
-#   gem 'coffee-rails', '~> 4.0.0'
+group :assets do
+  gem 'sass-rails',   '~> 4.0.0'
+  gem 'coffee-rails', '~> 4.0.0'
 
-#   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-#   # gem 'therubyracer', :platforms => :ruby
+  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
+  # gem 'therubyracer', :platforms => :ruby
 
-#   gem 'uglifier', '>= 1.3.0'
-#   gem 'zurb-foundation'
-# end
+  gem 'uglifier', '>= 1.3.0'
+  gem 'zurb-foundation'
+end
